# marenostrum-requirements

./: .gitignore  README.md  pyproject.toml
open_requirements/: __init__.py
