[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-requirements"
version = "0.1.0"
description = "A package to install common ML/AI dependencies"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "transformers",
    "vllm",
    "flash-attn",
    "trl",
    "lm-eval",
    "ray",
]

[project.urls]
Homepage = "https://github.com/lighton/open-requirements"
Repository = "https://github.com/lighton/open-requirements"

[tool.setuptools.packages.find]
where = ["."]
include = ["open_requirements*"]
