[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marenostrum-requirements"
version = "0.1.0"
description = "A package to install common ML/AI dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "transformers==4.57.3",
    "vllm==0.13.0",
    "trl==0.26.2",
    "lm-eval==0.4.9.2",
    "ray==2.53.0",
    "torch==2.9.0",
    "ninja==1.13.0",
    "einops==0.8.1",
    "packaging==25.0",
    "pybind11==3.0.1",
]

[project.urls]
Homepage = "https://github.com/lightonai/marenostrum-requirements"
Repository = "https://github.com/lightonai/marenostrum-requirements"

[tool.setuptools.packages.find]
where = ["."]
include = ["open_requirements*"]
